--- a/api/vercel.json
+++ b/api/vercel.json
@@ -6,5 +6,17 @@
       "src": "/(.*)",
       "dest": "/index.js"
     }
+  ],
+
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "access-control-allow-origin",
+          "value": "*"
+        }
+      ]
+    }
   ]
 }
